retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Actividad_economica__c</fullName>
        <label>Actividad económica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Otra</fullName>
                    <default>true</default>
                    <label>Otra</label>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Agropecuaria</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_inicio_de_empleo_o_negocio__c</fullName>
        <label>Año inicio de empleo o negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1948</fullName>
                </value>
                <value>
                    <fullName>1949</fullName>
                </value>
                <value>
                    <fullName>1950</fullName>
                </value>
                <value>
                    <fullName>1951</fullName>
                </value>
                <value>
                    <fullName>1952</fullName>
                </value>
                <value>
                    <fullName>1953</fullName>
                </value>
                <value>
                    <fullName>1954</fullName>
                </value>
                <value>
                    <fullName>1955</fullName>
                </value>
                <value>
                    <fullName>1956</fullName>
                </value>
                <value>
                    <fullName>1957</fullName>
                </value>
                <value>
                    <fullName>1958</fullName>
                </value>
                <value>
                    <fullName>1959</fullName>
                </value>
                <value>
                    <fullName>1960</fullName>
                </value>
                <value>
                    <fullName>1961</fullName>
                </value>
                <value>
                    <fullName>1962</fullName>
                </value>
                <value>
                    <fullName>1963</fullName>
                </value>
                <value>
                    <fullName>1964</fullName>
                </value>
                <value>
                    <fullName>1965</fullName>
                </value>
                <value>
                    <fullName>1966</fullName>
                </value>
                <value>
                    <fullName>1967</fullName>
                </value>
                <value>
                    <fullName>1968</fullName>
                </value>
                <value>
                    <fullName>1969</fullName>
                </value>
                <value>
                    <fullName>1970</fullName>
                </value>
                <value>
                    <fullName>1971</fullName>
                </value>
                <value>
                    <fullName>1972</fullName>
                </value>
                <value>
                    <fullName>1973</fullName>
                </value>
                <value>
                    <fullName>1974</fullName>
                </value>
                <value>
                    <fullName>1975</fullName>
                </value>
                <value>
                    <fullName>1976</fullName>
                </value>
                <value>
                    <fullName>1977</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antiguedad_en_la_actividad__c</fullName>
        <label>Antigüedad en la actividad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aprobado_con_programa_MI_CASA_YA__c</fullName>
        <label>¿Aprobado con programa MI CASA YA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asignado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box</description>
        <label>Asignado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asunto__c</fullName>
        <label>Asunto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Convenio clientes</fullName>
                    <default>true</default>
                    <label>Convenio clientes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camara_de_comercio__c</fullName>
        <label>Cámara de comercio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_digital__c</fullName>
        <label>Canal digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_VIGIA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check VIGIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ciudad_actualizacion_datos__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Departamento_actualizacion_datos__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abejorral</fullName>
                </value>
                <value>
                    <fullName>Ábrego</fullName>
                </value>
                <value>
                    <fullName>Abriaquí</fullName>
                </value>
                <value>
                    <fullName>Acacías</fullName>
                </value>
                <value>
                    <fullName>Acandí</fullName>
                </value>
                <value>
                    <fullName>Acevedo</fullName>
                </value>
                <value>
                    <fullName>Achí</fullName>
                </value>
                <value>
                    <fullName>Agrado</fullName>
                </value>
                <value>
                    <fullName>Aguachica</fullName>
                </value>
                <value>
                    <fullName>Aguada</fullName>
                </value>
                <value>
                    <fullName>Agua De Dios</fullName>
                </value>
                <value>
                    <fullName>Aguazul</fullName>
                </value>
                <value>
                    <fullName>Agustín Codazzi</fullName>
                </value>
                <value>
                    <fullName>Aipe</fullName>
                </value>
                <value>
                    <fullName>Albán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alcalá</fullName>
                </value>
                <value>
                    <fullName>Aldana</fullName>
                </value>
                <value>
                    <fullName>Alejandría</fullName>
                </value>
                <value>
                    <fullName>Algarrobo</fullName>
                </value>
                <value>
                    <fullName>Algeciras</fullName>
                </value>
                <value>
                    <fullName>Almaguer</fullName>
                </value>
                <value>
                    <fullName>Almeida</fullName>
                </value>
                <value>
                    <fullName>Altos Del Rosario</fullName>
                </value>
                <value>
                    <fullName>Alvarado</fullName>
                </value>
                <value>
                    <fullName>Amagá</fullName>
                </value>
                <value>
                    <fullName>Amalfi</fullName>
                </value>
                <value>
                    <fullName>Ambalema</fullName>
                </value>
                <value>
                    <fullName>Anapoima</fullName>
                </value>
                <value>
                    <fullName>Ancuyá</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_de_radicacion__c</fullName>
        <label>Ciudad de radicación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Medellin</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_de_residencia__c</fullName>
        <label>Ciudad de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_propietario__c</fullName>
        <label>Ciudad propietario</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Codeudores</relationshipLabel>
        <relationshipName>Codeudores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_prevalidado__c</fullName>
        <label>Cliente prevalidado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codeudor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Es verdadero si la cuenta está relacionada en uno de los campos Codeudor 1, 2 o 3 de la oportunidad</description>
        <label>Codeudor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codeudores__c</fullName>
        <label>Codeudores</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Familia__c</fullName>
        <label>Código Familia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Consecutivo_convenio__c</fullName>
        <description>Se actualiza por un flujo tomando como referencia el número de documento en la cuenta</description>
        <externalId>true</externalId>
        <label>Consecutivo convenio</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convenio__c</fullName>
        <label>Convenio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convenio_firmado__c</fullName>
        <label>Convenio firmado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correo_electronico_1__c</fullName>
        <label>Correo electrónico 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Correspondencia__c</fullName>
        <label>Correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Físico</fullName>
                </value>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>Físico/Correo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departamento_actualizacion_datos__c</fullName>
        <label>Departamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Atlántico</fullName>
                </value>
                <value>
                    <fullName>Bogotá D.C.</fullName>
                </value>
                <value>
                    <fullName>Bolívar</fullName>
                </value>
                <value>
                    <fullName>Boyacá</fullName>
                </value>
                <value>
                    <fullName>Caldas</fullName>
                </value>
                <value>
                    <fullName>Casanare</fullName>
                </value>
                <value>
                    <fullName>Cauca</fullName>
                </value>
                <value>
                    <fullName>Cesar</fullName>
                </value>
                <value>
                    <fullName>Chocó</fullName>
                </value>
                <value>
                    <fullName>Córdoba</fullName>
                </value>
                <value>
                    <fullName>Cundinamarca</fullName>
                </value>
                <value>
                    <fullName>Guainía</fullName>
                </value>
                <value>
                    <fullName>Huila</fullName>
                </value>
                <value>
                    <fullName>La Guajira</fullName>
                </value>
                <value>
                    <fullName>Magdalena</fullName>
                </value>
                <value>
                    <fullName>Meta</fullName>
                </value>
                <value>
                    <fullName>Nariño</fullName>
                </value>
                <value>
                    <fullName>Norte De Santander</fullName>
                </value>
                <value>
                    <fullName>Quindío</fullName>
                </value>
                <value>
                    <fullName>Risaralda</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Sucre</fullName>
                </value>
                <value>
                    <fullName>Tolima</fullName>
                </value>
                <value>
                    <fullName>Valle Del Cauca</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                    <isActive>false</isActive>
                    <label>Amazonas</label>
                </value>
                <value>
                    <fullName>Arauca</fullName>
                    <isActive>false</isActive>
                    <label>Arauca</label>
                </value>
                <value>
                    <fullName>Caquetá</fullName>
                    <isActive>false</isActive>
                    <label>Caquetá</label>
                </value>
                <value>
                    <fullName>Guaviare</fullName>
                    <isActive>false</isActive>
                    <label>Guaviare</label>
                </value>
                <value>
                    <fullName>Putumayo</fullName>
                    <isActive>false</isActive>
                    <label>Putumayo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_de_residencia__c</fullName>
        <inlineHelpText>Ejm: CL 45A # 35BB-76 SUR</inlineHelpText>
        <label>Dirección de residencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <formula>FLOOR((TODAY() - Fecha_de_nacimiento__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_aprobacion_Riesgos__c</fullName>
        <label>Estado de aprobación Riegos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud de aprobación</fullName>
                    <default>true</default>
                    <label>Solicitud de aprobación</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext_1__c</fullName>
        <label>Ext 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_de_asignacion__c</fullName>
        <label>Fecha de asignación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_cc__c</fullName>
        <label>Fecha de expedición cc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ingreso_a_empleo_actual__c</fullName>
        <label>Fecha de ingreso a empleo actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fotocopia_Rut_persona_juridica__c</fullName>
        <label>Fotocopia Rut persona jurídica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_Rut_persona_natural__c</fullName>
        <label>Fotocopia Rut persona natural</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_cedula_de_ciudadania__c</fullName>
        <label>Fotocopia cédula de ciudadanía</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_cedula_representante_legal__c</fullName>
        <label>Fotocopia cédula representante legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion__c</fullName>
        <label>Lugar de expedición</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_inmobiliaria__c</fullName>
        <label>Nombre de la inmobiliaria</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular_1__c</fullName>
        <label>Número de celular 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular_2__c</fullName>
        <label>Número de celular 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <externalId>true</externalId>
        <label>Número de documento</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Numero_de_telefono_celular__c</fullName>
        <label>Número de celular</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidades_creadas__c</fullName>
        <label>Oportunidades creadas</label>
        <summaryFilterItems>
            <field>Opportunity.CreatedDate</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Origen_del_cliente__c</fullName>
        <label>Origen del cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personas_a_cargo__c</fullName>
        <label>Personas a cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario_de_la_cuenta__c</fullName>
        <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.MiddleName&amp;&quot; &quot;&amp;Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario de la cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referencias_comerciales__c</fullName>
        <label>Referencias comerciales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Owner.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_prevalidador__c</fullName>
        <label>Resultado prevalidador</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cliente_prevalidado__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Viable</fullName>
                </value>
                <value>
                    <fullName>No viable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_interno__c</fullName>
        <label>Score interno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_prevalidador__c</fullName>
        <label>Score prevalidador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Masculino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud_al_gerente_comercial__c</fullName>
        <label>Solicitud al Gerente Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Teléfono 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                </value>
                <value>
                    <fullName>Jurídico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_ocupacion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Término indefinido</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Término fijo</fullName>
                </value>
                <value>
                    <fullName>Cooperativo</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Fijo</fullName>
                    <isActive>false</isActive>
                    <label>Fijo</label>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                    <isActive>false</isActive>
                    <label>Indefinido</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Obra</fullName>
                    <isActive>false</isActive>
                    <label>Obra</label>
                </value>
                <value>
                    <fullName>Prestación de servicio</fullName>
                    <isActive>false</isActive>
                    <label>Prestación de servicio</label>
                </value>
                <value>
                    <fullName>Prestación de sevicios</fullName>
                    <isActive>false</isActive>
                    <label>Prestación de sevicios</label>
                </value>
                <value>
                    <fullName>Temporal</fullName>
                    <isActive>false</isActive>
                    <label>Temporal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cédula ciudadanía</fullName>
                    <default>true</default>
                    <label>Cédula ciudadanía</label>
                </value>
                <value>
                    <fullName>Cédula de extranjería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_ocupacion__c</fullName>
        <label>Tipo de ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
                <value>
                    <fullName>Rentista de capital</fullName>
                </value>
                <value>
                    <fullName>Prestador de servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_CDT__c</fullName>
        <label>Tipo de pcto CDT</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>CDT</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_asignacion_de_cupo__c</fullName>
        <label>Tipo de pcto asignación de cupo</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Asignación de cupo</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>